# TypedLeadershipSimulator

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.ps1  configure_cmake.bat
.github/: copilot-instructions.md
.github/workflows/: build.yml
Open Game/: Equations.txt  diplomacy_relationships.txt  events_crises.txt  faction_culture_religion.txt  gdd.txt  npc_advisor_profile.txt  resource_economy.txt  simulation_loop.txt  typed_input_guidelines.txt  world_state_tracker.txt
Plan/: Phase10Plan.md  Phase10TestSuite.md  Phase11Plan.md  Phase11TestSuite.md  Phase12Plan.md  Phase12TestSuite.md  Phase13Plan.md  Phase13TestSuite.md  Phase14Plan.md  Phase14TestSuite.md  Phase1Plan.md  Phase1TestSuite.md  Phase2Plan.md  Phase2TestSuite.md  Phase3Plan.md  Phase3TestSuite.md  Phase4Plan.md  Phase4TestSuite.md  Phase5Plan.md  Phase5TestSuite.md  Phase6Plan.md  Phase6TestSuite.md  Phase7Plan.md  Phase7TestSuite.md  Phase8Plan.md  Phase8TestSuite.md  Phase9Plan.md  Phase9TestSuite.md
data/: action_registry.json  advisors.json  factions.json  llm_config.json  npcs.json  resources.json  settlement_layout.json  waypoints.json
docs/: ACTION_REGISTRY_COMPLETION_SUMMARY.md  ACTION_REGISTRY_REFERENCE.md  ANSWER_ARE_ALL_PARAMETERS_IMPLEMENTED.md  BUILD_SETUP.md  CMAKE_FIX_SUMMARY.md  COMPLETE_TEST_REPORT.md  COMPLETION_REPORT.md  CUMULATIVE_PROGRESS_REPORT.md  DOCUMENTATION_INDEX.md  Development_Status.md  EXPANDED_ACTION_REGISTRY_IMPLEMENTATION.md  FILE_INVENTORY.md  FINAL_SUMMARY.md  HOW_TO_RUN_TESTS.md  IMPLEMENTATION_NOTES.md  ImplementationChecklist.md  LLM_README.md  LLM_TECHNICAL_REFERENCE.md  ORGANIZATION_POLICY.md  PARAMETERS_IMPLEMENTATION_STATUS.md  PHASE10_COMPLETION_CHECKLIST.md  PHASE10_IMPLEMENTATION.md  PHASE10_INDEX.md  PHASE10_README.md  PHASE10_REFERENCE.md  PHASE10_SUMMARY.md  PHASE11_COMPLETION_SUMMARY.txt  PHASE11_DELIVERABLES.md  PHASE11_DOCUMENTATION_INDEX.md  PHASE11_PROJECT_MANIFEST.md  PHASE11_README.md  PHASE12_COMPLETION.md  PHASE13_COMPLETION.md  PHASE13_QUICK_REFERENCE.md  PHASE14_COMPLETION_REPORT.md  PHASE14_TODO_COMPLETION_DASHBOARD.md  PHASE15_COMPLETION.md  PHASE15_CURRENT_STATUS.md  PHASE15_IMPLEMENTATION_PLAN.md  PHASE15_PROGRESS_OVERVIEW.md  (+80 more)
include/: ActionRegistry.h  ActivitySystem.h  AmbientDialogueSystem.h  Collision.h  CommandValidator.h  ConsoleRenderer.h  ConversationQueue.h  Core.h  DecisionInterpreter.h  DialogueController.h  DialogueState.h  DialogueSystem.h  DialogueUI.h  EntityFactory.h  Enums.h  Event.h  Faction.h  FuzzyParser.h  GameDataLoader.h  GameTime.h  IGameRenderer.h  InputParser.h  InputUIFormatter.h  LLM.h  LLMConfigManager.h  LLMDeterministicReplay.h  LLMErrorRecovery.h  LLMProvider.h  LLMRequestQueue.h  LLMResponseCache.h  LLMTokenTracker.h  MovementConfig.h  MovementController.h  NPC.h  NPCMovement.h  NarrativeGeneration.h  NpcProblemSystem.h  OllamaProvider.h  ParameterExtractor.h  Pathfinding.h  (+12 more)
src/: ConsoleRenderer.cpp  ConversationQueue.cpp  DecisionInterpreter.cpp  GameDataLoader.cpp  LLMConfigManager.cpp  LLMDeterministicReplay.cpp  LLMErrorRecovery.cpp  LLMProvider.cpp  LLMRequestQueue.cpp  LLMResponseCache.cpp  LLMTokenTracker.cpp  NarrativeGeneration.cpp  OllamaProvider.cpp  SimulationManager.cpp  WorldState.cpp  main.cpp
src/core/: ActionRegistry.cpp  Advisor.cpp  AmbientDialogueSystem.cpp  CommandValidator.cpp  Core.cpp  DialogueController.cpp  DialogueState.cpp  DialogueUI.cpp  EntityFactory.cpp  Enums.cpp  Event.cpp  Faction.cpp  FuzzyParser.cpp  InputUIFormatter.cpp  LLM.cpp  LLMProviders.cpp  MovementController.cpp  NPC.cpp  NpcProblemSystem.cpp  ParameterExtractor.cpp  PathfindingEngine.cpp  ProximityDialogueSystem.cpp  Registries.cpp  Resource.cpp  Serialization.cpp  Vector3.cpp  WorldState.cpp  WorldState.h
src/interpreters/: NarrativeGeneration.cpp
src/phase3/: ActivitySystem.cpp  Collision.cpp  NPCMovement.cpp  Pathfinding.cpp  Player.cpp  ProximityDetection.cpp  World.cpp
src/phase4/: DialogueSystem.cpp  GameTime.cpp  InputParser.cpp  ReplaySystem.cpp  SimulationManager.cpp  UIFormatter.cpp
tests/: CMakeLists.txt  ConversationQueueTests.cpp  Phase10IntegrationTests.cpp  Phase10Tests.cpp  Phase11Tests.cpp  Phase11_TestDocumentation.md  Phase11_TestExecutionGuide.md  Phase12Tests.cpp  Phase13Tests.cpp  Phase14Tests.cpp  Phase1Tests.cpp  Phase2IntegrationTests.cpp  Phase3Tests.cpp  Phase5_ActionRegistryTests.cpp  Phase5_CommandValidatorTests.cpp  Phase5_FuzzyParserTests.cpp  Phase5_InputUIFormatterTests.cpp  Phase5_ParameterExtractorTests.cpp  Phase6_DialogueSystemTests.cpp  Phase7Tests.cpp  Phase8Tests.cpp  Phase9Tests.cpp  Phase9Tests_Fixed.cpp
